# CERG

./: .gitignore  README.md  pyproject.toml  requirements.txt
cerg/: __init__.py  viz.py  viz_web.py
cerg/controllers/: __init__.py  pd.py
cerg/core/: __init__.py  config.py  controller.py  robot.py  simulator.py  state.py  trajectory.py
cerg/core/cerg/: __init__.py  auxiliary_reference.py  constraints.py  dsm.py  navigation_field.py
cerg/models/rrr/: rrr.urdf  rrr.xml
cerg/robots/: __init__.py  rrr.py
cerg/simulators/: __init__.py  drake_sim.py  mujoco_sim.py
configs/: environment_example.yaml  rrr_default.yaml
examples/: build_arm_xml.py
examples/phoebe/: phoebe.xml  phoebe_mujoco.py  phoebe_robot.py  run_pd_phoebe.py  wheels.xml
examples/phoebe/assets/: cylinder_mockup_short_final_mm_1.stl  mecanum_wheel_22.stl
examples/phoebe/assets/full/: arm_mount.mtl  autec_antenna.mtl  autec_receiver.mtl  axle.mtl  base.mtl  body.mtl  end-cover.mtl  forearm.mtl  ich-005_realsense_cable_mount_corr.mtl  lift_high_500mm.mtl  lift_low_500mm.mtl  lift_mid_500mm.mtl  lift_rails.mtl  lights.mtl  monitor.mtl  monitor_hinge_base.mtl  monitor_hinge_top.mtl  mtc_effector_side.mtl  mtc_robot_side.mtl  robotiq_hande_cb_adapter.mtl  (+12 more)
examples/phoebe/configs/: phoebe_config.yaml
examples/phoebe/models/: phoebe_dual_arms.xml  phoebe_left_arm.xml  phoebe_right_arm.xml
examples/phoebe/scripts/: run_cerg_phoebe.py  run_pd_phoebe.py
tests/: conftest.py  plot_pd_behavior.py  test_cerg.py  test_cerg_mujoco.py  test_drake.py  test_mujoco.py  test_pd.py  test_pd_mujoco.py
(+71 files in other folders)
